# mini-project

./: .gitignore
backend/api/: package-lock.json  package.json  tsconfig.json
backend/api/src/: server.ts
backend/api/src/config/: index.ts
backend/api/src/handlers/: status.ts  upload.ts
backend/api/src/lib/: db.ts  supabase.ts
backend/api/src/routes/: index.ts
backend/api/src/types/: index.ts
backend/api/src/utils/: createGoogleKey.ts
backend/classification-service/: .env.example  pyproject.toml
backend/classification-service/app/model/: model_rf.py
backend/classification-service/app/routes/: router.py
backend/classification-service/app/scripts/: 3gram_formatting.py  data_collection.sh  dataset_creation.py  native_3gram_pipeline.py  top_500_3grams.txt
backend/classification-service/app/utils/: __init__.py
frontend/: package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: GradientText.tsx
